# aibi

./: .gitignore
backend/: go.mod  go.sum  main.go  pyproject.toml
backend/app/: auth.py  database.py  main.py
backend/app/agent/: analyst.py  analyzer.py  llm_client.py
backend/app/api/: __init__.py  auth.py  chat.py  datasource.py  settings.py
backend/app/models/: datasource.py  llm_config.py
backend/config/: config.go
backend/database/: database.go
backend/handlers/: auth.go  datasource.go  llm.go
backend/middleware/: auth.go
backend/models/: models.go
frontend/: index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: AppLayout.tsx
frontend/src/pages/: Chat.tsx  DataSources.tsx  LLM.tsx  Login.tsx  Settings.tsx
frontend/src/store/: auth.ts
